--- a/src/app/util/tooltip/tooltip.component.scss
+++ b/src/app/util/tooltip/tooltip.component.scss
@@ -5,7 +5,7 @@
 
 .tooltip {
   position: fixed;
-  background: var(--pdz-color-surface);
+  background: var(--pdz-color-surface-inverse);
   color: var(--pdz-color-on-surface);
   padding: 8px;
   border-radius: var(--pdz-shape-corner-sm);
