--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -77,15 +77,15 @@ $core-tokens: (
   "cyan-400": #26c6da,
   "cyan-450": #00bcd4,
   "cyan-500": #00acc1,
-  "cyan-550": #009faf,
-  "cyan-600": #00919c,
-  "cyan-650": #00838a,
-  "cyan-700": #007577,
-  "cyan-750": #006766,
-  "cyan-800": #005a56,
-  "cyan-850": #084e49,
-  "cyan-900": #0d423e,
-  "cyan-950": #0d3835,
+  "cyan-550": #009cb2,
+  "cyan-600": #008ba2,
+  "cyan-650": #007c93,
+  "cyan-700": #006e83,
+  "cyan-750": #006074,
+  "cyan-800": #005466,
+  "cyan-850": #004858,
+  "cyan-900": #003c4b,
+  "cyan-950": #01313f,
 
   // Orange
   "orange-50": #fff7e6,
