--- a/src/app/util/tooltip/tooltip.component.html
+++ b/src/app/util/tooltip/tooltip.component.html
@@ -2,17 +2,18 @@
   <ng-content></ng-content>
 </div>
 
-<div
-  class="tooltip"
-  *ngIf="showTooltip"
-  [ngClass]="{ 'fade-out': !isHovered, visible: isHovered }"
-  [ngStyle]="{
-    top: tooltipPosition.top + 'px',
-    left: tooltipPosition.left + 'px',
-  }"
->
-  <ng-container
-    *ngTemplateOutlet="tooltipContent"
-    class="tooltip-content"
-  ></ng-container>
-</div>
+@if (showTooltip) {
+  <div
+    class="tooltip"
+    [ngClass]="{ 'fade-out': !isHovered, visible: isHovered }"
+    [ngStyle]="{
+      top: tooltipPosition.top + 'px',
+      left: tooltipPosition.left + 'px',
+    }"
+  >
+    <ng-container
+      *ngTemplateOutlet="tooltipContent"
+      class="tooltip-content"
+    ></ng-container>
+  </div>
+}
