fix tooltip background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<pdz-tooltip></pdz-tooltip>
 <!-- TODO: remove bg-page; breaks logo -->
 <div class="bg-page" [ngClass]="getTheme()">
   <pdz-top-navbar></pdz-top-navbar>
