--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -195,9 +195,6 @@ $core-tokens: (
   // Logo Specific
   "logo-core-color": #9c65aa,
 
-  // Gradients
-  "primary-gradient-light": linear-gradient(135deg, #4ac1d0, #b2f1fa),
-  "primary-gradient-dark": linear-gradient(135deg, #79dfec, #4ac1d0),
-  "primary-gradient-purple": linear-gradient(135deg, #9575cd, #673ab7),
+  // Misc
   "debug": #ff00ff
 );
