--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
@@ -1,6 +1,6 @@
 @use "@angular/material" as mat;
-@import "../../../../styles/breakpoints";
-@import "../../../../styles/mixins";
+@use "../../../../styles/breakpoints" as *;
+@use "../../../../styles/mixins" as *;
 
 :host {
   flex-grow: 1;
