--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -18,3 +18,18 @@ $typography: (
     line-height: 1rem,
   ),
 );
+
+$fonts: (
+  fancy: "Nasalization RG",
+  regular: "Nunito",
+);
+
+$font-size: (
+  xxs: 0.5rem,
+  xs: 0.75rem,
+  sm: 0.9rem,
+  md: 1rem,
+  lg: 1.2rem,
+  xl: 1.5rem,
+  xxl: 2rem,
+);
