update speedtier colors

--- a/src/app/drafts/matchup-overview/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup.scss
@@ -8,7 +8,7 @@
     width: 100%;
 
     padding: 0 1rem 0.5rem;
-    color: var(--pdz-color-primary);
+    // color: var(--pdz-color-primary);
     font-weight: 700;
     .widget-label {
       font-size: 1.2em;
