--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -15,29 +15,33 @@ $theme: (
     outline: "gray-700",
     outline-variant: "gray-400",
 
-    primary: "cyan-800",
-    primary-lighter: "cyan-700",
-    primary-darker: "cyan-900",
+    primary: "cyan-500",
+    primary-lighter: "cyan-400",
+    primary-darker: "cyan-600",
     on-primary: "white",
-    primary-container: "cyan-300",
-    primary-container-lighter: "cyan-200",
-    primary-container-darker: "cyan-400",
-    primary-container-hover: "cyan-400",
-    on-primary-container: "cyan-950",
-    primary-hover: "cyan-900",
-    primary-border: "cyan-500",
-    primary-subtle: "cyan-200",
-    primary-gradient: linear-gradient(135deg, #009cb2, #89e2ee),
+    primary-container: "cyan-250",
+    primary-container-lighter: "cyan-100",
+    primary-container-darker: "cyan-300",
+    primary-container-hover: "cyan-300",
+    on-primary-container: "cyan-900",
+    primary-hover: "cyan-600",
+    primary-border: "cyan-300",
+    primary-subtle: "cyan-100",
+    primary-gradient: linear-gradient(
+        135deg,
+        var(--pdz-color-cyan-400),
+        var(--pdz-color-cyan-200)
+      ),
     secondary: "orange-500",
     secondary-lighter: "orange-400",
     secondary-darker: "orange-600",
     on-secondary: "white",
-    secondary-container: "orange-200",
+    secondary-container: "orange-250",
     secondary-container-lighter: "orange-100",
     secondary-container-darker: "orange-300",
     secondary-container-hover: "orange-300",
     on-secondary-container: "orange-900",
-    secondary-hover: "orange-700",
+    secondary-hover: "orange-600",
     secondary-border: "orange-300",
     secondary-subtle: "orange-100",
 
