--- a/src/styles/_pdz-theming.scss
+++ b/src/styles/_pdz-theming.scss
@@ -26,7 +26,9 @@
   @each $name, $value in $font-size {
     --pdz-font-size-#{$name}: #{$value};
   }
-
+  @each $name, $value in $line-height {
+    --pdz-line-height-#{$name}: #{$value};
+  }
   @include apply-typography(body-medium);
   @include apply-theme(map.get(map.get($themes, normal), light));
   @each $theme-name, $variations in $themes {
