--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -33,3 +33,13 @@ $font-size: (
   xl: 1.5rem,
   xxl: 2rem,
 );
+
+$line-height: (
+  xxs: 0.5rem,
+  xs: 0.75rem,
+  sm: 0.9rem,
+  md: 1rem,
+  lg: 1.2rem,
+  xl: 1.5rem,
+  xxl: 2rem,
+);
