--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -193,8 +193,5 @@ $core-tokens: (
   "blue-950": #021e31,
 
   // Logo Specific
-  "logo-core-color": #9c65aa,
-
-  // Misc
-  "debug": #ff00ff
+  "logo-core-color": #9c65aa
 );
