--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -89,6 +89,8 @@ $theme: (
     logo-top: "cyan-500",
     logo-bottom: "orange-500",
     logo-background: "white",
+
+    debug: #ff00ff,
   ),
   dark: (
     background: "gray-950",
